[package]
name = "scorekeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
anyhow = "*"
tokio = "*"
thiserror = "*"
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger", "rapidoc"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
